--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
+    <h2 class="turn-announcer">It's Player 1's turn</h2>
     <div id="game-board">
-        
-    </div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+      </div>
+      
 
 
 </body>
