ADD THE WIN, DROW LOGIC

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
       </div>
+      <button type="button" id="new-game">Start a new game</button>
       
 
 
